# gmail-agent

./: .gitignore  README.md  main.py  pyproject.toml
app/: auth.py  config.py  firestore.py  gmail.py  llm_utils.py  main.py  session_store.py  user.py
app/agents/: gmail_graph.py
app/gmail/: auth.py  gmail.py  secret_manager.py
gmail-oauth-app/: app.py  gmail_auth.py
streamlit_app/: streamlit-langgraph.py  streamlit.py
